--- a/WebUtils.HttpLogging/WebUtils.HttpLogging.csproj
+++ b/WebUtils.HttpLogging/WebUtils.HttpLogging.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
