--- a/WebUtils.HttpLogging.Sample/WebUtils.HttpLogging.Sample.csproj
+++ b/WebUtils.HttpLogging.Sample/WebUtils.HttpLogging.Sample.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\WebUtils.HttpLogging\WebUtils.HttpLogging.csproj" />
   </ItemGroup>
 
